[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/Boll.gd" type="Script" id=1]
[ext_resource path="res://scripts/ViktGlidare.gd" type="Script" id=2]
[ext_resource path="res://scripts/HastighetGlidare.gd" type="Script" id=3]
[ext_resource path="res://scripts/VinkelGlidare.gd" type="Script" id=4]
[ext_resource path="res://scripts/LuftmotståndBock.gd" type="Script" id=5]
[ext_resource path="res://assets/5.png" type="Texture" id=6]
[ext_resource path="res://assets/10.png" type="Texture" id=7]
[ext_resource path="res://assets/0.png" type="Texture" id=8]
[ext_resource path="res://assets/15.png" type="Texture" id=9]
[ext_resource path="res://assets/20.png" type="Texture" id=10]
[ext_resource path="res://assets/25.png" type="Texture" id=11]
[ext_resource path="res://assets/30.png" type="Texture" id=12]
[ext_resource path="res://assets/40.png" type="Texture" id=13]
[ext_resource path="res://assets/35.png" type="Texture" id=14]
[ext_resource path="res://assets/45.png" type="Texture" id=15]
[ext_resource path="res://assets/cnr.otf" type="DynamicFontData" id=16]
[ext_resource path="res://scripts/MenyKnapp.gd" type="Script" id=17]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="DynamicFont" id=22]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=23]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 128, 2, 6 )

[sub_resource type="QuadMesh" id=7]

[sub_resource type="SpatialMaterial" id=11]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 8 )

[sub_resource type="SpatialMaterial" id=12]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 6 )

[sub_resource type="SpatialMaterial" id=16]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 7 )

[sub_resource type="SpatialMaterial" id=14]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 9 )

[sub_resource type="SpatialMaterial" id=15]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 10 )

[sub_resource type="SpatialMaterial" id=17]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 11 )

[sub_resource type="SpatialMaterial" id=18]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=19]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 14 )

[sub_resource type="SpatialMaterial" id=20]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 13 )

[sub_resource type="SpatialMaterial" id=21]
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 15 )

[node name="Root" type="Spatial"]

[node name="Boll" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Boll"]
mesh = SubResource( 2 )
material/0 = null

[node name="Knappar" type="Panel" parent="Boll"]
margin_right = 481.0
margin_bottom = 202.0

[node name="LuftmotståndBock" type="CheckBox" parent="Boll/Knappar"]
margin_left = 120.0
margin_top = 11.0
margin_right = 144.0
margin_bottom = 35.0
focus_mode = 0
script = ExtResource( 5 )

[node name="Text" type="Label" parent="Boll/Knappar/LuftmotståndBock"]
margin_left = -104.0
margin_top = 6.0
margin_right = -13.0
margin_bottom = 20.0
text = "Luftmotstånd:"

[node name="ViktGlidare" type="HSlider" parent="Boll/Knappar"]
margin_left = 120.0
margin_top = 37.0
margin_right = 470.0
margin_bottom = 53.0
min_value = 1.0
max_value = 1000.0
value = 500.0
script = ExtResource( 2 )

[node name="Text" type="Label" parent="Boll/Knappar/ViktGlidare"]
margin_left = -104.0
margin_right = -39.0
margin_bottom = 14.0
text = "Vikt"

[node name="VinkelGlidare" type="HSlider" parent="Boll/Knappar"]
margin_left = 120.0
margin_top = 89.0
margin_right = 470.0
margin_bottom = 105.0
max_value = 90.0
step = 0.1
value = 45.0
script = ExtResource( 4 )

[node name="Text" type="Label" parent="Boll/Knappar/VinkelGlidare"]
margin_left = -104.0
margin_right = -39.0
margin_bottom = 14.0
text = "Vinkel"

[node name="HastighetGlidare" type="HSlider" parent="Boll/Knappar"]
margin_left = 120.0
margin_top = 108.0
margin_right = 470.0
margin_bottom = 124.0
focus_mode = 0
min_value = 1.0
max_value = 20.0
step = 0.1
value = 10.0
script = ExtResource( 3 )

[node name="Text" type="Label" parent="Boll/Knappar/HastighetGlidare"]
margin_left = -104.0
margin_right = -39.0
margin_bottom = 14.0
rect_scale = Vector2( 0.905144, 0.958609 )
text = "Hastighet"

[node name="Position" type="Label" parent="Boll/Knappar"]
margin_left = 16.0
margin_top = 167.0
margin_right = 84.0
margin_bottom = 181.0
text = "Position"

[node name="Längd" type="Label" parent="Boll/Knappar"]
margin_left = 16.0
margin_top = 186.0
margin_right = 84.0
margin_bottom = 200.0
text = "Längd: 0.00m"

[node name="KastaKnapp" type="Button" parent="Boll/Knappar"]
margin_left = 347.0
margin_top = 165.0
margin_right = 474.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 22 )
text = "Kasta"

[node name="MenyKnapp" type="Button" parent="Boll/Knappar"]
margin_left = 210.0
margin_top = 165.0
margin_right = 337.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 23 )
text = "Meny"
script = ExtResource( 17 )

[node name="CameraTarget" type="Spatial" parent="Boll"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 17 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="Boll/CameraTarget"]
target = NodePath("..")

[node name="Floor" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
mesh = SubResource( 10 )
material/0 = null

[node name="Markers" type="Spatial" parent="."]

[node name="Marker0m" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker0m"]
mesh = SubResource( 7 )
material/0 = SubResource( 11 )

[node name="Marker5m" type="Spatial" parent="Markers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker5m"]
mesh = SubResource( 7 )
material/0 = SubResource( 12 )

[node name="Marker10m" type="Spatial" parent="Markers"]
transform = Transform( 1.995, 0, 0, 0, 2, 0, 0, 0, 1, 10, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker10m"]
mesh = SubResource( 7 )
material/0 = SubResource( 16 )

[node name="Marker15m" type="Spatial" parent="Markers"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 15, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker15m"]
mesh = SubResource( 7 )
material/0 = SubResource( 14 )

[node name="Marker20m" type="Spatial" parent="Markers"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 20, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker20m"]
mesh = SubResource( 7 )
material/0 = SubResource( 15 )

[node name="Marker25m" type="Spatial" parent="Markers"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 25, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker25m"]
mesh = SubResource( 7 )
material/0 = SubResource( 17 )

[node name="Marker30m" type="Spatial" parent="Markers"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 30, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker30m"]
mesh = SubResource( 7 )
material/0 = SubResource( 18 )

[node name="Marker35m" type="Spatial" parent="Markers"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 35, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker35m"]
mesh = SubResource( 7 )
material/0 = SubResource( 19 )

[node name="Marker40m" type="Spatial" parent="Markers"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 40, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker40m"]
mesh = SubResource( 7 )
material/0 = SubResource( 20 )

[node name="Marker45m" type="Spatial" parent="Markers"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 45, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Markers/Marker45m"]
mesh = SubResource( 7 )
material/0 = SubResource( 21 )

[connection signal="pressed" from="Boll/Knappar/KastaKnapp" to="Boll" method="_on_KastaKnapp_pressed"]
[connection signal="pressed" from="Boll/Knappar/MenyKnapp" to="Boll/Knappar/MenyKnapp" method="_on_MenyKnapp_pressed"]
